--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
-<html>
-    <Head>
-
-    </Head>
-    <main>
-       <p>Hola que tal?</p> 
-    </main>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header id="header">
+        <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="">
+    <nav id="nav-bar">
+        <ul>
+            <li>Academy</li>
+            <li>Shows</li>
+            <li>Products</li>
+        </ul>
+    </nav>
+    </header>   
+    
+</body>
 </html>
