--- a/index.html
+++ b/index.html
@@ -17,7 +17,36 @@
             <li>Products</li>
         </ul>
     </nav>
+    <h1>Trombone Slide Repair</h1>
+    <h3>our mission is your happiness</h3>
+    <input type="text" placeholder="Enter your email">
+    <button>Subscribe</button>
+   
     </header>   
-    
+    <main>
+        <ul>
+            <li>Virtual Classes</li>
+            <li>Repair Shop</li>
+            <li>Free delivery</li>
+        </ul>  
+        </main>
+        <video src="video1.mp4" width="500" heigth="520" controls>
+        </video>
+
+        
+            <div>
+
+            </div>
+
+            <footer>
+                <nav>
+                <ul>
+                    <li>Terms</li>
+                    <li>Privacy</li>
+                    <li>Contact</li>
+                </ul>  
+            </nav>
+            <small>Copyright 2023, Jonathan and Nydia</small>
+            </footer>
 </body>
 </html>
